--- a/css/ui.css
+++ b/css/ui.css
@@ -3,8 +3,8 @@ body {
   font-family: Helvetica, Arial, Sans-Serif;
 }
 #canvas-contain {
-  background-color: #ccc;
-  background-image: linear-gradient(
+  background-color: #fff;
+  /* background-image: linear-gradient(
       45deg,
       #999 25%,
       transparent 25%,
@@ -19,7 +19,7 @@ body {
       transparent 75%,
       #999 75%,
       #999
-    );
+    ); */
   background-size: 30px 30px;
   background-position: 0 0, 15px 15px;
 }
